fixed squished fox on the main page

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: url("https://i.imgur.com/BGssb4x.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
+  backdrop-filter: blur(5px); // blur the bgs
+  height: 100vh;
 }
 
 .lirary__header {
